<package format="3">
  <name>sw_px2</name>
  <version>0.0.1</version>
  <description>Software PX2 to calcurate depth with Midas and yolov7</description>
  <maintainer email="developer@todo.todo">developer</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
	  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
